Unified: Add Guest tooltip to the user avatar.

The user avatar did not have proper tooltip when it's guest session.

TEST=manual
BUG=889831

Change-Id: I620704000b2d01b83406eeebc301c54a4138bac1
Reviewed-on: https://chromium-review.googlesource.com/1250383
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595470}
Former-commit-id: 95b598fccc780679d35604c814cac9b24f351f82